--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -14,6 +14,7 @@ edit_uri: blob/main/docs/
 # Theme
 theme:
     name: readthedocs
+    include_homepage_in_sidebar: false
     language: en
     custom_dir: theme/
 
@@ -40,6 +41,7 @@ nav:
     - Releases: community/releases.md
     - License: community/license.md
     - Code of Conduct: community/code-of-conduct.md
+    - index.md
 
 # Extensions
 markdown_extensions:
@@ -47,4 +49,4 @@ markdown_extensions:
         permalink: '#'
     - admonition
 extra_css:
-    - 'css/extra.css'
+    - css/extra.css
